tests/codegen/pass/027-array-simple-types.hyg
fun f(x: int): int = x + 1;
let arr4: array {(int) -> int} = array(2 + 2, f);
assert(f(3) = arrayElem(arr4, 0)(3))