tests/codegen/fail/029-array-element-read-out-of-bounds.hyg
let arr: array {int} = array(2, 1);
let arr2: array {int} = array(2, 2);
let x: int = arrayElem(arr, 2);
let i: int = 2 - 3;
let y: int = arrayElem(arr, i);
print("should not print!")